js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2a.7.kt
fun funA() = listOf(fun4()).joinToString()
fun funB() = listOf(fun1()).joinToString()
